# prune-code

./: MANIFEST.in  README.md  README_expanded.md  config.yaml  mkdocs_expanded.yml  pyproject.toml  pyproject_expanded.toml  test.md
docs/: tech-specs.md  user-manual.md
logs/: log_20251215_112741.txt  log_20251215_113211.txt  log_20251215_115852.txt  log_20251215_130705.txt  log_20251215_131329.txt  log_20251215_131846.txt  log_20251215_131925.txt  log_20251215_132436.txt  log_20251215_132725.txt  log_20251215_134019.txt  log_20251215_134205.txt  log_20251215_135809.txt  log_20251215_135852.txt  log_20251215_135953.txt
src/prune_code/: distiller.py
tests/: test_permission_error_continues.py
